--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jsqr": "^1.4.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
+    "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
