--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.12",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-slider": "^1.3.6",
     "@tanstack/react-query-devtools": "^5.81.2",
     "@types/node": "^20",
     "@types/react": "^18",
