Repairs: embed equipment in list RPC; remove dept auto-filter UI; map thiet_bi; update session notes; mark migration applied

--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "@supabase/supabase-js": "^2.45.0",
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-table": "^8.19.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "jsonwebtoken": "^9.0.2",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
