chore: Add MCP configuration security
- Add .vscode/mcp.json to .gitignore to prevent access token exposure
- Create .vscode/mcp.json.example as safe template
- Add .vscode/README.md with setup instructions for MCP configuration
- Ensure sensitive Supabase access tokens are not committed to version control

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ firestore-debug.log
 
 # html backups from form migration
 *.html.backup
+
+# MCP configuration with sensitive tokens
+.vscode/mcp.json
