--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/react-dom": "^18",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
+    "esbuild": "0.14.47",
     "eslint": "9.36.0",
     "eslint-config-next": "15.5.3",
     "patch-package": "^8.0.0",
