feat: setup complete DevOps workflow for safe development
- Add local development setup with Supabase local integration
- Create automation scripts for development workflow
- Add comprehensive documentation and onboarding guides
- Update .gitignore for proper secret management
- Enable team collaboration with standardized setup process

New files:
- scripts/local-dev.ps1: Main development workflow automation
- scripts/quick-setup.ps1: Fast setup for new machines
- scripts/devops-workflow.ps1: Legacy DevOps commands
- .env.local.development: Environment template
- DEVOPS_WORKFLOW_SUMMARY.md: Workflow overview
- ONBOARDING_NEW_MACHINE.md: New machine setup guide
- docs/LOCAL_DEVELOPMENT_SETUP.md: Detailed setup instructions

Benefits:
- 100% free local development (no /month branch cost)
- Zero risk to production database
- Professional DevOps workflow
- Team-ready collaboration setup

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,25 @@ firestore-debug.log
 
 # MCP configuration with sensitive tokens
 .vscode/mcp.json
+
+# DevOps and Local Development
+# Include templates but exclude actual env files
+.env.local
+.env.production.local
+.env.development.local
+.env.test.local
+
+# Supabase local development
+supabase/.temp/
+supabase/docker/
+supabase/logs/
+*.log
+
+# Keep templates for team setup
+!.env.local.development
+!.env.example
+
+# Development tooling - commit these
+# scripts/
+# docs/
+# DEVOPS_WORKFLOW_SUMMARY.md
