--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "dev-https": "next dev --turbopack -p 9002 --experimental-https",
+    "dev": "node --max-old-space-size=4096 ./node_modules/next/dist/bin/next dev --turbopack",
+    "dev-https": "node --max-old-space-size=4096 ./node_modules/next/dist/bin/next dev --turbopack -p 9002 --experimental-https",
     "build": "next build",
     "build:vercel": "next build",
     "build:cloudflare": "node scripts/build-cloudflare.js",
