--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "react-window": "^2.2.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
@@ -72,6 +74,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-window": "^1.8.8",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "esbuild": "0.14.47",
