fix: guard db:types against truncating hand-written database.ts
Shell `>` redirect truncates the target before checking if supabase CLI
succeeded; a failed run (not linked, no network) silently empties
src/types/database.ts, which 38 source files import.

- scripts/gen-types.js: captures stdout to memory, validates non-empty
  output and presence of "export type Json" marker, then writes
  atomically to src/types/database.generated.ts — never touching
  database.ts on failure or success
- package.json: db:types now calls the guard script instead of raw
  shell redirect
- .gitignore: exclude database.generated.ts (generated, not committed)

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ firestore-debug.log
 .env.test.local
 
 # Supabase local development
+src/types/database.generated.ts
 supabase/.temp/
 supabase/docker/
 supabase/logs/
